# proof

./: Cargo.toml  README.md
docs/: index.html
src/: cli.rs  main.rs  pdf.rs  scan.rs  tui.rs
templates/: delivery-proof.typ
