[package]
name = "proof"
version = "0.1.0"
edition = "2021"
description = "Generate branded delivery PDFs from media files"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
crossterm = "0.29.0"
exif = { package = "kamadak-exif", version = "0.5" }
humansize = "2.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
indicatif = "0.17"
natord = "1.0"
ratatui = "0.30.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
thiserror = "2.0"
toml = "0.8"
walkdir = "2.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
